--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Sample App</string>
     <string name="give_me_a_new_string">Give me a new String!</string>
+    <string name="give_me_pair_new_names">Give me new names!</string>
 </resources>
